Tue May 23 16:40:17 2000  Owen Taylor  <otaylor@redhat.com>

	* process.[ch]: Add functions to get the command line and 
	status of the process.

	* Makefile.am tree.c gui.h memprof.glade: Add tree window to display
	all current traced processes.

Tue May 23 14:19:44 2000  Owen Taylor  <otaylor@redhat.com>

	* server.[ch] process.[ch]: Add process and server GtkObject's
	with signals for process creation, status changes, exit.

	* memintercept.[ch] process.c: Trap _exit() and wait for a
	response from the server. Add a MI_EXIT command.

	* inode.c memprof.h: Separate out the inode-finding code from process.c
	
Tue May 23 05:05:10 2000  Owen Taylor  <otaylor@redhat.com>

	* main.c process.c memintercept.c: Hook up the follow-fork
	and follow-exec options.

	* main.c: Quit when all windows are closed.

	* main.c: Catch windows being closed from the window manager
	and remove timeouts properly.

2000-05-07  Valek Filippov  <frob@df.ru>

	* ru.po: Added "ru" to ALL_LINGUAS.

2000-05-03  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Added "no" to ALL_LINGUAS.
	
2000-02-23  Peter Hawkins	<peterhawkins@ozemail.com.au>

	* main.c: Stopped preferences dialog from being opened multiple times at once.

2000-02-21  Lauris Kaplinski  <lauris@ariman.ee>

       * configure.in: Added et to ALL_LINGUAS
	
Tue Jan  4 02:41:28 2000  Owen Taylor  <otaylor@redhat.com>

	* README: Added note telling Debian users about more
	splitty	little packages they need.

	* configure.in (MEMPROF_LIBS): Added check for -lglade-gnome

Sat Nov 20 17:14:40 1999  Owen Taylor  <otaylor@redhat.com>

	* bfdutils.c (process_map_sections): Try accessing
	section->_cooked_size to deal with bug(?) in older
	binutils.

	* memintercept.c (STACK_MAX_SIZE): Change PIPE_BUF to
	#define constant since we no longer use pipes.

Sat Nov 20 10:40:48 1999  Owen Taylor  <otaylor@redhat.com>

        [ Sync CVS with my current tree. This commit destabilizes
	  things a bit, but adds neat new features like