@@ -99,7 +99,7 @@ void        process_set_follow_exec (MPProcess          *process,
 void  process_run             (MPProcess        *process,
 			       const char       *path,
 			       char            **args);
-void  process_detatch         (MPProcess        *process);
+void  process_detach          (MPProcess        *process);
 void  process_exec_reset      (MPProcess        *process);
 void  process_set_status      (MPProcess        *process,
 			       MPProcessStatus   status);
